@@ -18,6 +18,8 @@ dillo-2.2.1 [not released yet]
  - Fix segfault with form inputs and repush for stylesheets.
  - Handle white-space: pre-wrap.
    Patches: corvid
++- Implement line-height.
+   Patch: Johannes Hofmann, corvid
 
 -----------------------------------------------------------------------------
 
